# before-you-go

./: .coverage  .gitignore  Dockerfile  alembic.ini  coverage.xml  docker-compose.yml  inspect_coverage.py  last_coverage.json  pyproject.toml  readme.md  translation_key_finder.py
app/: auth.py  barcode_lookup.py  controller.py  controller_article.py  controller_storage.py  controller_user.py  mail_sending.py  main.py  models.py  route_checkin.py  route_user.py  utility.py  validators.py
app/alembic/: env.py
app/alembic/versions/: 2024_07_29_1137-555b816afb15_initial.py  2024_10_24_2001-eeb3d38d1850_add_quantity.py
app/locale/: de.json  en.json
app/templates/: article_check_in.html  article_check_in_date.html  base.html  error.html  full_storage_view.html  login.html  register.html  storage_view.html
tests/: test_controller.py  test_main.py
